# prototype-frontend-agent

backend/: .env.sample  README.md  pyproject.toml
backend/src/: index.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  mcp-test.tsx
frontend/src/components/: ConversationSidebar.tsx
frontend/src/hooks/: useChat.ts  useChatWithHistory.ts
frontend/src/services/: conversationService.ts  conversationStore.ts  titleGenerationService.ts
frontend/src/utils/: debounce.ts
mcp/calculator/: index.tsx  package.json  pnpm-lock.yaml
