[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-dotenv==1.0.0",
    "azure-identity==1.15.0",
    "openai==1.12.0",
    "pydantic==2.5.2",
    "httpx==0.27.2"
]
